feat: update API version
