# swagger_server/controllers/common_controller.py
@@ -9,17 +9,6 @@ from swagger_server.models.inline_response2002 import InlineResponse2002  # noqa
 from swagger_server import util
 
 
-def audio_get():  # noqa: E501
-    """Get a random comment for user&#x27;s audio
-
-     # noqa: E501
-
-
-    :rtype: InlineResponse200
-    """
-    return 'do some magic!'
-
-
 def audio_post(body):  # noqa: E501
     """Upload user&#x27;s recorded audio
 
@@ -51,9 +40,20 @@ def info_post(body):  # noqa: E501
 
 
 def report_get():  # noqa: E501
-    """report_get
+    """Get a random report based on user&#x27;s information
 
-    Get a random report based on user&#x27;s information # noqa: E501
+     # noqa: E501
+
+
+    :rtype: InlineResponse2001
+    """
+    return 'do some magic!'
+
+
+def report_picture_get():  # noqa: E501
+    """Get a picture of generated report
+
+     # noqa: E501
 
 
     :rtype: InlineResponse2002
@@ -62,11 +62,11 @@ def report_get():  # noqa: E501
 
 
 def text_get():  # noqa: E501
-    """text_get
+    """Get a random piece of text based on user&#x27;s information
 
-    Get a random piece of text based on user&#x27;s information # noqa: E501
+     # noqa: E501
 
 
-    :rtype: InlineResponse2001
+    :rtype: InlineResponse200
     """
     return 'do some magic!'
