# swagger_server/swagger/swagger.yaml
@@ -8,9 +8,9 @@ info:
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
-  version: 1.0.0
+  version: 1.0.2
 servers:
-- url: https://virtserver.swaggerhub.com/BBT-Tech-S/To-Love-Camgirl/1.0.0
+- url: https://virtserver.swaggerhub.com/BBT-Tech-S/To-Love-Camgirl/1.0.2
   description: SwaggerHub API Auto Mocking
 - url: http://server.sforest.in/bbtt/api
   description: Test Server (Under construct)
@@ -35,32 +35,16 @@ paths:
             example:
               name: Joshua
               gender: male
-              language: Chinese
         required: true
       responses:
         200:
           description: ok
+        401:
+          description: You have to call /info first
         405:
           description: Invalid input
       x-openapi-router-controller: swagger_server.controllers.common_controller
   /audio:
-    get:
-      tags:
-      - common
-      summary: Get a random comment for user's audio
-      operationId: audio_get
-      responses:
-        200:
-          description: The url of comment audio
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/inline_response_200'
-              example:
-                url: http://server.sforest.in/bbtt/static/comment.wav
-        401:
-          description: You have to call /info first
-      x-openapi-router-controller: swagger_server.controllers.common_controller
     post:
       tags:
       - common
@@ -86,8 +70,26 @@ paths:
     get:
       tags:
       - common
-      description: Get a random piece of text based on user's information
+      summary: Get a random piece of text based on user's information
       operationId: text_get
+      responses:
+        200:
+          description: ok
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/inline_response_200'
+              example:
+                text: 2019爱上女主播
+        401:
+          description: You have to call /info first
+      x-openapi-router-controller: swagger_server.controllers.common_controller
+  /report:
+    get:
+      tags:
+      - common
+      summary: Get a random report based on user's information
+      operationId: report_get
       responses:
         200:
           description: ok
@@ -96,19 +98,22 @@ paths:
               schema:
                 $ref: '#/components/schemas/inline_response_200_1'
               example:
-                text: |-
+                property: 悠然仙姬音
+                score: 4
+                description: |-
                   铁骑将军：热血骁勇，戎马一生
                   宁为百夫长，胜作一书生。
                   ——杨炯《从军行》
+                url: http://server.sforest.in/bbtt/static/comment.wav
         401:
           description: You have to call /info first
       x-openapi-router-controller: swagger_server.controllers.common_controller
-  /report:
+  /report/picture:
     get:
       tags:
       - common
-      description: Get a random report based on user's information
-      operationId: report_get
+      summary: Get a picture of generated report
+      operationId: report_picture_get
       responses:
         200:
           description: ok
@@ -117,14 +122,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/inline_response_200_2'
               example:
-                property: 悠然仙姬音
-                confidence: 88
-                character: 龚琳娜
-                score: 4
-                type: 攻
-                description: |-
-                  你的声音自带故事感
-                  如午后红茶，拥有让人沉静的力量
+                image: data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAKIAAAC0CAIAAACYH2DKAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAAHYcAAB2HAY/l8WUAAAaMSURBVHhe7ZnbgdsgEEVTlwtyParGzbiYDQMziMcgpPUqK+Xe85M1IBjmIMDOny8CADVDQM0QUDME1AwBNUNAzRBQMwTUDAE1Q0DNEFAzBNQMATVDQM0Q/AvN7/db/yK/xPmaX88/kedLCxq0flT9r4nhPJ7LOJzU4rG8brR4z9b8Xh4Tixua369nyKZ+WHm/foCBI43msQwdzlsY2vIn+PQlOFezIzk4qvPjan6/lmd6tM+ndfoRA0s/aRlFs00zxxjezrpAaMrkDS40Pp6v9mRXzY/H00WfHlXr6nE1zbeeNtpNUlu/6Xg/qdGQdo23wWmaTWmdTyeRlrhlfYGFoKkTnJjMfCLCFkkR1ttOAR0/hFKTm1r4YfWNKI7ssWY3Ny6X1myOnfAsU3mK1jQj9581sX0iflxzF0FDbpstb1B0nPrtArFenkv4CjKkbnxBzTkZ8X20N2VZdLnnTGlC1iRXfhOxUvrRz8Jk5t/X/OjQcm2b2+lMauywmGi2TiZYNzfQPCXOZVNLqiydnKa5HiRStbVp7R83lZTttc1goQiWOotmMtm9nLFpW3YiGr4dd2lHypt6mE2fnhV3kpOZb/UXsOCOatZunVZKP24qsYI8ZyFsUKm0QscrayeT3ctpV7AZcqGOm3GfnpVU16TWkvERBzXbmBvp7ueRSqQgKM4Cra/2KMpNqjiurllf2zHarljCzQU3X7ybOdoDH3FMs17CnSYrm5pjR+vj65xF9fojQaM+oC0vqnmHijVyTdCALreTmffprtCnj2mONXFpvsNNsm8obGkOFAs7kt9eo1cs3EKz+xuFXkmryMOCtpt4weL+bvxbmgPat9v5RHNN8StfJiQrzLddDXfQ7EbX5UO2cEfniD6fFZPqseb20MjHRt+2LosM+y3nKYs5NlNUrNxTtERJd1ep/F80a5LbtBn9Cmieb5lUD3WMqWPTDtoRNjSHKn3ESHq1WaZbBWGErUQe4OyzOX2rqkgVOfKh5ryxNXM8S7NzwKRY29jWyRUVw35DIKlONuV0CsnM5G95k+uulfTey3/Oabej2ezl969gjuYsONFcTtSK5M1DK0fVWt/raGUGHHWJPL21ymmbNbfkGWRCXGFVRfHaRrmFZjc6naSnuT2m4uaWmmVyij+i19HL9NQZFkVYglXBLs0yTzn55TpaT6YbaiuRB7iKZlnP8V/FE5zI+UzXpA7L/6B+eK06plkqn+Uuc0hzh9zDQmjDRX11zXL6NPiajbFfpXm8Y1I/1HFUc4MzbCpaS2J3cm7I/iyrMCRDq4bcQvMWFrnmJ0zeuXzKHl57n6b+sprHOckncy9eH7q2Znfn1NnWmgep7JJnuRrP28l3iaNuGIHTdogzbCqqA4nbmX8urxQD3kKzG12TkGGSA12etWBr2k6+Sxx1FkF3wuiK3KPZC8zT7CADifesvRxvK5EHuIXm3I2XzJbvah6zR7P2UTVNZVuxegTr+pdwd805IV6CEvbrftt0e9LaaNTGGc66HVGFFt68+KZXRbr6mlGtX7l1fZvUxT00hy8fNtkYdWANfG+W7VV2FkRJo1k+6tCBWCWUeUtPON06b36OwqPpYjaxA9xDc5uccHsuE9L9p1ymvGY3/kY0zVwttY9DmkfymikJ1m+6eX4P//few5ykWfa2QLG1pZ0uoiXHCWmfzzfeZIuh08eCLgB7Qj+WuAGnwgqtqZEfUML3JL9yJ/Hn7087OU8zuRTUDAE1Q0DNEFAzBNQMATVDQM0QUDME1AwBNUNAzRBQMwTUDAE1Q0DNEFAzBNQMATVDQM0QUDME1AwBNUNAzRBQMwTUDAE1Q0DNEFAzBNQMATVDQM0QUDME1AwBNUNAzRBQMwTUDAE1Q0DNEFAzBNQMATVDQM0QUDME1AwBNUNAzRBQMwTUDAE1Q0DNEFAzBNQMATVDQM0QUDME1AwBNUNAzRBQMwTUDAE1Q0DNEFAzBNQMATVDQM0QUDME1AwBNUNAzRBQMwTUDAE1Q0DNEFAzBNQMATVDQM0QUDME1AwBNUNAzRBQMwTUDAE1Q0DNEFAzBNQMATVDQM0QUDME1AwBNUNAzRBQMwTUDAE1Q0DNEFAzBNQMATVDQM0QUDME1AwBNUNAzRBQMwTUDAE1Q0DNEFAzBNQMATVDQM0QUDME1AwBNUNAzRBQMwTUDAE1Q0DNEFAzBNQMATVDQM0QUDME1AwBNUNAzRBQMwTUDAE1Q0DNAHx9/QVR2oNGWCO1mQAAAABJRU5ErkJggg==
         401:
           description: You have to call /info first
       x-openapi-router-controller: swagger_server.controllers.common_controller
@@ -141,54 +139,41 @@ components:
           - male
           - female
           - unknown
-        language:
-          type: string
-          enum:
-          - Chinese
-          - English
-    inline_response_200:
-      type: object
-      properties:
-        url:
-          type: string
-      example:
-        url: url
     body_1:
       type: object
       properties:
         id:
           type: string
-    inline_response_200_1:
+    inline_response_200:
       type: object
       properties:
         text:
           type: string
       example:
         text: text
-    inline_response_200_2:
+    inline_response_200_1:
       type: object
       properties:
         property:
-          type: string
-        confidence:
-          maximum: 100
-          minimum: 0
-          type: integer
-        character:
           type: string
         score:
           maximum: 5
           minimum: 1
           type: integer
-        type:
-          type: string
         description:
           type: string
+        url:
+          type: string
       example:
-        score: 3
-        character: character
-        confidence: 8
+        score: 1
         property: property
         description: description
-        type: type
+        url: url
+    inline_response_200_2:
+      type: object
+      properties:
+        image:
+          type: string
+      example:
+        image: image
 
